deploy: 39c2a1f28fdfc7f32dd35fcdbebbbfdfed6a99ab

--- a/main/tutorials/l_master.ipynb
+++ b/main/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "26713e36",
+   "id": "3db38254",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f60d4c5",
+   "id": "3742a14b",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3acbc830",
+   "id": "d2328142",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00a62779",
+   "id": "bd51d1c8",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e90fad09",
+   "id": "cc3f788b",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1891227",
+   "id": "f3b3940d",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f38edab6",
+   "id": "45cc92e7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-05T10:53:10.081907Z",
-     "iopub.status.busy": "2025-06-05T10:53:10.081490Z",
-     "iopub.status.idle": "2025-06-05T10:53:13.085940Z",
-     "shell.execute_reply": "2025-06-05T10:53:13.085419Z"
+     "iopub.execute_input": "2025-06-05T11:41:18.756268Z",
+     "iopub.status.busy": "2025-06-05T11:41:18.756087Z",
+     "iopub.status.idle": "2025-06-05T11:41:21.709829Z",
+     "shell.execute_reply": "2025-06-05T11:41:21.709276Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd730a03",
+   "id": "1f52bd4b",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51fcef6f",
+   "id": "1d938e5a",
    "metadata": {},
    "source": [
     "1. a bare Hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76aefc3f",
+   "id": "d09165b7",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84fdcf77",
+   "id": "49f07d31",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cbe4434c",
+   "id": "3c0e6b78",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d8a9bc4",
+   "id": "4b34382d",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3cefa7c1",
+   "id": "7309e2ba",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e974d5cb",
+   "id": "9a412e68",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "67aa97ed",
+   "id": "35c1d092",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-05T10:53:13.088259Z",
-     "iopub.status.busy": "2025-06-05T10:53:13.087798Z",
-     "iopub.status.idle": "2025-06-05T10:53:15.125980Z",
-     "shell.execute_reply": "2025-06-05T10:53:15.125395Z"
+     "iopub.execute_input": "2025-06-05T11:41:21.711996Z",
+     "iopub.status.busy": "2025-06-05T11:41:21.711696Z",
+     "iopub.status.idle": "2025-06-05T11:41:23.683926Z",
+     "shell.execute_reply": "2025-06-05T11:41:23.683391Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a760a2e2",
+   "id": "c21fa7d7",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b91aee3f",
+   "id": "b532eb38",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-05T10:53:15.128133Z",
-     "iopub.status.busy": "2025-06-05T10:53:15.127765Z",
-     "iopub.status.idle": "2025-06-05T10:53:15.131547Z",
-     "shell.execute_reply": "2025-06-05T10:53:15.130937Z"
+     "iopub.execute_input": "2025-06-05T11:41:23.686022Z",
+     "iopub.status.busy": "2025-06-05T11:41:23.685615Z",
+     "iopub.status.idle": "2025-06-05T11:41:23.689404Z",
+     "shell.execute_reply": "2025-06-05T11:41:23.688745Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6794ec11",
+   "id": "0d7b930b",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ddab0842",
+   "id": "cc5e2708",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "237ed281",
+   "id": "861694c3",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20eda43f",
+   "id": "de421088",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2c73cad4",
+   "id": "f6e40469",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-05T10:53:15.133310Z",
-     "iopub.status.busy": "2025-06-05T10:53:15.133129Z",
-     "iopub.status.idle": "2025-06-05T10:53:15.177729Z",
-     "shell.execute_reply": "2025-06-05T10:53:15.177196Z"
+     "iopub.execute_input": "2025-06-05T11:41:23.691500Z",
+     "iopub.status.busy": "2025-06-05T11:41:23.691079Z",
+     "iopub.status.idle": "2025-06-05T11:41:23.734144Z",
+     "shell.execute_reply": "2025-06-05T11:41:23.733565Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "820e0265",
+   "id": "ea482d2f",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f986a651",
+   "id": "35ebc7ba",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-05T10:53:15.179769Z",
-     "iopub.status.busy": "2025-06-05T10:53:15.179329Z",
-     "iopub.status.idle": "2025-06-05T10:53:15.246284Z",
-     "shell.execute_reply": "2025-06-05T10:53:15.245677Z"
+     "iopub.execute_input": "2025-06-05T11:41:23.736006Z",
+     "iopub.status.busy": "2025-06-05T11:41:23.735798Z",
+     "iopub.status.idle": "2025-06-05T11:41:23.801409Z",
+     "shell.execute_reply": "2025-06-05T11:41:23.800812Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c6a4722",
+   "id": "94791e91",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03d8d7a1",
+   "id": "e1458c77",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "5558036f",
+   "id": "1c8e8668",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-05T10:53:15.248322Z",
-     "iopub.status.busy": "2025-06-05T10:53:15.247923Z",
-     "iopub.status.idle": "2025-06-05T10:53:15.274198Z",
-     "shell.execute_reply": "2025-06-05T10:53:15.273732Z"
+     "iopub.execute_input": "2025-06-05T11:41:23.803528Z",
+     "iopub.status.busy": "2025-06-05T11:41:23.803180Z",
+     "iopub.status.idle": "2025-06-05T11:41:23.829379Z",
+     "shell.execute_reply": "2025-06-05T11:41:23.828914Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94ed77f9",
+   "id": "0b4c642e",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46c182db",
+   "id": "369d2c36",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a27da10f",
+   "id": "206765b5",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4dc9406d",
+   "id": "ea0db757",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d311d399",
+   "id": "744c302b",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0df7f2d2",
+   "id": "dac1ece0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-05T10:53:15.276182Z",
-     "iopub.status.busy": "2025-06-05T10:53:15.275812Z",
-     "iopub.status.idle": "2025-06-05T10:53:15.279909Z",
-     "shell.execute_reply": "2025-06-05T10:53:15.279361Z"
+     "iopub.execute_input": "2025-06-05T11:41:23.831418Z",
+     "iopub.status.busy": "2025-06-05T11:41:23.831045Z",
+     "iopub.status.idle": "2025-06-05T11:41:23.835271Z",
+     "shell.execute_reply": "2025-06-05T11:41:23.834696Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77e7e016",
+   "id": "48f1f1ff",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "831776bf",
+   "id": "8600d97c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-05T10:53:15.281543Z",
-     "iopub.status.busy": "2025-06-05T10:53:15.281366Z",
-     "iopub.status.idle": "2025-06-05T10:53:15.284347Z",
-     "shell.execute_reply": "2025-06-05T10:53:15.283873Z"
+     "iopub.execute_input": "2025-06-05T11:41:23.837156Z",
+     "iopub.status.busy": "2025-06-05T11:41:23.836788Z",
+     "iopub.status.idle": "2025-06-05T11:41:23.839741Z",
+     "shell.execute_reply": "2025-06-05T11:41:23.839283Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27694420",
+   "id": "3ed293d9",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "f2617b19",
+   "id": "2d49ae03",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-05T10:53:15.285882Z",
-     "iopub.status.busy": "2025-06-05T10:53:15.285709Z",
-     "iopub.status.idle": "2025-06-05T10:53:17.870492Z",
-     "shell.execute_reply": "2025-06-05T10:53:17.869790Z"
+     "iopub.execute_input": "2025-06-05T11:41:23.841656Z",
+     "iopub.status.busy": "2025-06-05T11:41:23.841346Z",
+     "iopub.status.idle": "2025-06-05T11:41:26.410083Z",
+     "shell.execute_reply": "2025-06-05T11:41:26.409439Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3b1bbb0",
+   "id": "842781b3",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6584ef70",
+   "id": "cdd40bd9",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69114c3f",
+   "id": "47911471",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "724cd1cc",
+   "id": "3a889423",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "7cfee539",
+   "id": "88113289",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-05T10:53:17.872737Z",
-     "iopub.status.busy": "2025-06-05T10:53:17.872366Z",
-     "iopub.status.idle": "2025-06-05T10:53:17.876129Z",
-     "shell.execute_reply": "2025-06-05T10:53:17.875484Z"
+     "iopub.execute_input": "2025-06-05T11:41:26.412330Z",
+     "iopub.status.busy": "2025-06-05T11:41:26.411864Z",
+     "iopub.status.idle": "2025-06-05T11:41:26.415602Z",
+     "shell.execute_reply": "2025-06-05T11:41:26.415119Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f4ac846bc40>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f226d6abd80>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf060d6f",
+   "id": "b4ca88f4",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6153bfa8",
+   "id": "f6408794",
    "metadata": {},
    "source": [
     "## Postprocessing"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9be76779",
+   "id": "99e03704",
    "metadata": {},
    "source": [
     "You can define custom postprocessing. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b34a5129",
+   "id": "388d5292",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "27b14d75",
+   "id": "9d13b9d6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-05T10:53:17.878220Z",
-     "iopub.status.busy": "2025-06-05T10:53:17.877860Z",
-     "iopub.status.idle": "2025-06-05T10:53:17.880872Z",
-     "shell.execute_reply": "2025-06-05T10:53:17.880299Z"
+     "iopub.execute_input": "2025-06-05T11:41:26.417422Z",
+     "iopub.status.busy": "2025-06-05T11:41:26.417256Z",
+     "iopub.status.idle": "2025-06-05T11:41:26.420399Z",
+     "shell.execute_reply": "2025-06-05T11:41:26.419719Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "450275d0",
+   "id": "65c2cbbd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-05T10:53:17.882730Z",
-     "iopub.status.busy": "2025-06-05T10:53:17.882325Z",
-     "iopub.status.idle": "2025-06-05T10:53:18.952523Z",
-     "shell.execute_reply": "2025-06-05T10:53:18.951910Z"
+     "iopub.execute_input": "2025-06-05T11:41:26.422260Z",
+     "iopub.status.busy": "2025-06-05T11:41:26.421943Z",
+     "iopub.status.idle": "2025-06-05T11:41:27.485422Z",
+     "shell.execute_reply": "2025-06-05T11:41:27.484829Z"
     }
    },
    "outputs": [
