deploy: cb4f8d5ea63611b8d59fe95383ac3db7a89e0875

--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d7154b56",
+   "id": "1d4c3523",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "791c64fe",
+   "id": "9ccb6ca0",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5542c4d",
+   "id": "b86b73b4",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d97b9c43",
+   "id": "6c4b4860",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0bd1b490",
+   "id": "ae191aae",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af04beb3",
+   "id": "06965144",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9fb1866d",
+   "id": "5cb8a343",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-10T09:11:27.479327Z",
-     "iopub.status.busy": "2025-06-10T09:11:27.478795Z",
-     "iopub.status.idle": "2025-06-10T09:11:30.618620Z",
-     "shell.execute_reply": "2025-06-10T09:11:30.618006Z"
+     "iopub.execute_input": "2025-06-11T09:21:03.941437Z",
+     "iopub.status.busy": "2025-06-11T09:21:03.940923Z",
+     "iopub.status.idle": "2025-06-11T09:21:07.169350Z",
+     "shell.execute_reply": "2025-06-11T09:21:07.168786Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8331ceed",
+   "id": "7a4ab16a",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53aee8b7",
+   "id": "e8a8a82f",
    "metadata": {},
    "source": [
     "1. a bare Hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3893f571",
+   "id": "366da05d",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "858665a5",
+   "id": "ecb13f49",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68bcfe55",
+   "id": "e8c10977",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6063d9fa",
+   "id": "ae052c94",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aae11751",
+   "id": "7b04a7f2",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92e2d308",
+   "id": "e962ffdf",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b9a2867b",
+   "id": "0aea5b12",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-10T09:11:30.620940Z",
-     "iopub.status.busy": "2025-06-10T09:11:30.620640Z",
-     "iopub.status.idle": "2025-06-10T09:11:32.856800Z",
-     "shell.execute_reply": "2025-06-10T09:11:32.856202Z"
+     "iopub.execute_input": "2025-06-11T09:21:07.171609Z",
+     "iopub.status.busy": "2025-06-11T09:21:07.171184Z",
+     "iopub.status.idle": "2025-06-11T09:21:09.391557Z",
+     "shell.execute_reply": "2025-06-11T09:21:09.390871Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "183b7da0",
+   "id": "c3b59654",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "5bc91c9e",
+   "id": "779d20ae",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-10T09:11:32.858955Z",
-     "iopub.status.busy": "2025-06-10T09:11:32.858542Z",
-     "iopub.status.idle": "2025-06-10T09:11:32.862419Z",
-     "shell.execute_reply": "2025-06-10T09:11:32.861925Z"
+     "iopub.execute_input": "2025-06-11T09:21:09.393642Z",
+     "iopub.status.busy": "2025-06-11T09:21:09.393192Z",
+     "iopub.status.idle": "2025-06-11T09:21:09.397005Z",
+     "shell.execute_reply": "2025-06-11T09:21:09.396304Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f8a4bea",
+   "id": "5f854e48",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0dcdecec",
+   "id": "c2247cd3",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e16ddba",
+   "id": "cad2a267",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c9d404a",
+   "id": "a80a3f8b",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "287a94ba",
+   "id": "41b607bc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-10T09:11:32.864397Z",
-     "iopub.status.busy": "2025-06-10T09:11:32.864036Z",
-     "iopub.status.idle": "2025-06-10T09:11:32.912392Z",
-     "shell.execute_reply": "2025-06-10T09:11:32.911827Z"
+     "iopub.execute_input": "2025-06-11T09:21:09.398999Z",
+     "iopub.status.busy": "2025-06-11T09:21:09.398622Z",
+     "iopub.status.idle": "2025-06-11T09:21:09.445830Z",
+     "shell.execute_reply": "2025-06-11T09:21:09.445293Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83b1580c",
+   "id": "9b851846",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "30b6cea9",
+   "id": "82d47d26",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-10T09:11:32.914696Z",
-     "iopub.status.busy": "2025-06-10T09:11:32.914267Z",
-     "iopub.status.idle": "2025-06-10T09:11:32.991683Z",
-     "shell.execute_reply": "2025-06-10T09:11:32.991052Z"
+     "iopub.execute_input": "2025-06-11T09:21:09.447805Z",
+     "iopub.status.busy": "2025-06-11T09:21:09.447437Z",
+     "iopub.status.idle": "2025-06-11T09:21:09.519789Z",
+     "shell.execute_reply": "2025-06-11T09:21:09.519249Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82bd8e4f",
+   "id": "79ba4323",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4c1050d",
+   "id": "452af969",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a742e93b",
+   "id": "df5b6080",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-10T09:11:32.994043Z",
-     "iopub.status.busy": "2025-06-10T09:11:32.993612Z",
-     "iopub.status.idle": "2025-06-10T09:11:33.025514Z",
-     "shell.execute_reply": "2025-06-10T09:11:33.024834Z"
+     "iopub.execute_input": "2025-06-11T09:21:09.521767Z",
+     "iopub.status.busy": "2025-06-11T09:21:09.521559Z",
+     "iopub.status.idle": "2025-06-11T09:21:09.553078Z",
+     "shell.execute_reply": "2025-06-11T09:21:09.552484Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec42af55",
+   "id": "bb081ea3",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "149befc4",
+   "id": "27bd7c58",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fd83fc8",
+   "id": "090f94ac",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f717525d",
+   "id": "4aeb5022",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59183082",
+   "id": "6b90306f",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "5cedde5a",
+   "id": "3d6fa5d3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-10T09:11:33.027933Z",
-     "iopub.status.busy": "2025-06-10T09:11:33.027368Z",
-     "iopub.status.idle": "2025-06-10T09:11:33.032318Z",
-     "shell.execute_reply": "2025-06-10T09:11:33.031586Z"
+     "iopub.execute_input": "2025-06-11T09:21:09.555129Z",
+     "iopub.status.busy": "2025-06-11T09:21:09.554770Z",
+     "iopub.status.idle": "2025-06-11T09:21:09.559505Z",
+     "shell.execute_reply": "2025-06-11T09:21:09.558890Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa04f607",
+   "id": "6f308c51",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "83c5e01b",
+   "id": "0239d801",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-10T09:11:33.034582Z",
-     "iopub.status.busy": "2025-06-10T09:11:33.034094Z",
-     "iopub.status.idle": "2025-06-10T09:11:33.037583Z",
-     "shell.execute_reply": "2025-06-10T09:11:33.036875Z"
+     "iopub.execute_input": "2025-06-11T09:21:09.561735Z",
+     "iopub.status.busy": "2025-06-11T09:21:09.561446Z",
+     "iopub.status.idle": "2025-06-11T09:21:09.564613Z",
+     "shell.execute_reply": "2025-06-11T09:21:09.563988Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d2251a8",
+   "id": "23b2f79c",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "d4e7a560",
+   "id": "b4bb66e2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-10T09:11:33.039584Z",
-     "iopub.status.busy": "2025-06-10T09:11:33.039234Z",
-     "iopub.status.idle": "2025-06-10T09:11:35.706249Z",
-     "shell.execute_reply": "2025-06-10T09:11:35.705716Z"
+     "iopub.execute_input": "2025-06-11T09:21:09.566369Z",
+     "iopub.status.busy": "2025-06-11T09:21:09.566188Z",
+     "iopub.status.idle": "2025-06-11T09:21:12.207981Z",
+     "shell.execute_reply": "2025-06-11T09:21:12.207394Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f1d00fb",
+   "id": "7a4fff08",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64fee5e8",
+   "id": "4d28f0f7",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fdd714bb",
+   "id": "ce73f852",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce1e440c",
+   "id": "d463ab0c",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "265f756a",
+   "id": "47d7605c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-10T09:11:35.708677Z",
-     "iopub.status.busy": "2025-06-10T09:11:35.708170Z",
-     "iopub.status.idle": "2025-06-10T09:11:35.712243Z",
-     "shell.execute_reply": "2025-06-10T09:11:35.711626Z"
+     "iopub.execute_input": "2025-06-11T09:21:12.209836Z",
+     "iopub.status.busy": "2025-06-11T09:21:12.209641Z",
+     "iopub.status.idle": "2025-06-11T09:21:12.213633Z",
+     "shell.execute_reply": "2025-06-11T09:21:12.213002Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7fe254cb4860>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f335aef0c20>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dedd2b80",
+   "id": "502d89b5",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6504d13b",
+   "id": "ee8a5a2a",
    "metadata": {},
    "source": [
     "## Postprocessing"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eaa268a6",
+   "id": "48f9fcf5",
    "metadata": {},
    "source": [
     "You can define custom postprocessing. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03aadf37",
+   "id": "506c5903",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "f053e4e6",
+   "id": "f774aa5b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-10T09:11:35.714218Z",
-     "iopub.status.busy": "2025-06-10T09:11:35.713853Z",
-     "iopub.status.idle": "2025-06-10T09:11:35.717114Z",
-     "shell.execute_reply": "2025-06-10T09:11:35.716609Z"
+     "iopub.execute_input": "2025-06-11T09:21:12.215622Z",
+     "iopub.status.busy": "2025-06-11T09:21:12.215308Z",
+     "iopub.status.idle": "2025-06-11T09:21:12.218313Z",
+     "shell.execute_reply": "2025-06-11T09:21:12.217710Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "25aa4e32",
+   "id": "857c45e2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-10T09:11:35.718913Z",
-     "iopub.status.busy": "2025-06-10T09:11:35.718532Z",
-     "iopub.status.idle": "2025-06-10T09:11:36.854066Z",
-     "shell.execute_reply": "2025-06-10T09:11:36.853496Z"
+     "iopub.execute_input": "2025-06-11T09:21:12.220115Z",
+     "iopub.status.busy": "2025-06-11T09:21:12.219779Z",
+     "iopub.status.idle": "2025-06-11T09:21:13.298594Z",
+     "shell.execute_reply": "2025-06-11T09:21:13.298052Z"
     }
    },
    "outputs": [
@@ -671,7 +671,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
